sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:17: error: not found: value tri
        tri = 0
        ^